bug 9860: "Throughput Quota Enhancement" Feature Request Progress: code optimization and cleanup after code review: - The countername column in the counters table should allow up to 255 characters instead of 128. - Renamed CounterPresetInfoUtils to CounterPresetInfo and moved it into a proper package, "com.l7tech.policy.assertion.sla". - Removed an unused method listExistingCounterNames() in Service Admin API - Merged CounterIDManager and CounterManager into a single manager.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@29250 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/console/src/main/java/com/l7tech/console/panels/resources/ThroughputQuota.form
+++ b/modules/gateway/console/src/main/java/com/l7tech/console/panels/resources/ThroughputQuota.form
@@ -243,4 +243,11 @@
       </grid>
     </children>
   </grid>
+  <buttonGroups>
+    <group name="counterStrategyButtonGroup">
+      <member id="5ccac"/>
+      <member id="85a38"/>
+      <member id="3e4d0"/>
+    </group>
+  </buttonGroups>
 </form>
