--- a/modules/gateway/assertions/JsonTransformationAssertion/src/main/java/com/l7tech/external/assertions/jsontransformation/console/JsonTransformationPropertiesDialog.form
+++ b/modules/gateway/assertions/JsonTransformationAssertion/src/main/java/com/l7tech/external/assertions/jsontransformation/console/JsonTransformationPropertiesDialog.form
@@ -219,7 +219,7 @@
                   <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
-                  <text value="Test"/>
+                  <text resource-bundle="com/l7tech/external/assertions/jsontransformation/console/JsonTransformationPropertiesDialog" key="test"/>
                 </properties>
               </component>
               <hspacer id="70117">
