Update IVY to use shared configurations (one general, one for modular assertions) and to move common test dependencies to the layer7-test module.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@29301 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/assertions/templates/ivy.xml
+++ b/modules/gateway/assertions/templates/ivy.xml
@@ -20,14 +20,14 @@
     </configurations>
     <publications/>
     <dependencies>
-        <dependency name="layer7-utility" rev="latest.integration" force="true" conf="optional"/>
-        <dependency name="layer7-common" rev="latest.integration" force="true" conf="optional; test->default,test"/>
-        <dependency name="layer7-policy" rev="latest.integration" force="true" conf="optional; test->default,test"/>
-        <dependency name="layer7-gui" rev="latest.integration" force="true" conf="optional"/>
-        <dependency name="layer7-gateway-common" rev="latest.integration" force="true" conf="optional"/>
-        <dependency name="layer7-gateway-server" rev="latest.integration" force="true"
+        <dependency name="layer7-utility" rev="latest.integration" conf="optional"/>
+        <dependency name="layer7-common" rev="latest.integration" conf="optional; test->default,test"/>
+        <dependency name="layer7-policy" rev="latest.integration" conf="optional; test->default,test"/>
+        <dependency name="layer7-gui" rev="latest.integration" conf="optional"/>
+        <dependency name="layer7-gateway-common" rev="latest.integration" conf="optional"/>
+        <dependency name="layer7-gateway-server" rev="latest.integration"
                     conf="optional; test->default,test"/>
-        <dependency name="layer7-gateway-console" rev="latest.integration" force="true" conf="optional"/>
+        <dependency name="layer7-gateway-console" rev="latest.integration" conf="optional"/>
         <dependency org="com.intellij" name="forms_rt" rev="10.0.2" force="true" conf="optional"/>
         <dependency org="org.springframework" name="spring-test" rev="3.0.5.RELEASE" force="true" conf="test"/>
         <dependency org="junit" name="junit" rev="4.8.2" force="true" conf="test"/>
