--- a/modules/gateway/console/src/main/java/com/l7tech/console/panels/resources/EmailListenerManagerWindow.form
+++ b/modules/gateway/console/src/main/java/com/l7tech/console/panels/resources/EmailListenerManagerWindow.form
@@ -69,7 +69,7 @@
               <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
             </constraints>
           </vspacer>
-          <component id="bc734" class="javax.swing.JButton" binding="copyButton" default-binding="true">
+          <component id="bc734" class="javax.swing.JButton" binding="cloneButton" default-binding="true">
             <constraints>
               <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
