--- a/modules/gateway/console/src/main/java/com/l7tech/console/panels/resources/LogSinkManagerWindow.form
+++ b/modules/gateway/console/src/main/java/com/l7tech/console/panels/resources/LogSinkManagerWindow.form
@@ -85,7 +85,7 @@
                   <text resource-bundle="com/l7tech/console/resources/LogSinkManagerWindow" key="auditSinkButton.label"/>
                 </properties>
               </component>
-              <component id="29dd7" class="javax.swing.JButton" binding="copyButton" default-binding="true">
+              <component id="29dd7" class="javax.swing.JButton" binding="cloneButton">
                 <constraints>
                   <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
