--- a/modules/gateway/console/src/main/java/com/l7tech/console/panels/resources/SsgConnectorManagerWindow.form
+++ b/modules/gateway/console/src/main/java/com/l7tech/console/panels/resources/SsgConnectorManagerWindow.form
@@ -77,12 +77,12 @@
                   <text value="&amp;Service Resolution"/>
                 </properties>
               </component>
-              <component id="76d5" class="javax.swing.JButton" binding="copyButton" default-binding="true">
+              <component id="76d5" class="javax.swing.JButton" binding="cloneButton" default-binding="true">
                 <constraints>
                   <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
-                  <text value="C&amp;opy"/>
+                  <text value="Cl&amp;one"/>
                 </properties>
               </component>
             </children>
