--- a/modules/gateway/console/src/main/java/com/l7tech/console/panels/resources/RegexDialog.form
+++ b/modules/gateway/console/src/main/java/com/l7tech/console/panels/resources/RegexDialog.form
@@ -3,7 +3,7 @@
   <grid id="7fd87" binding="mainPanel" layout-manager="GridLayoutManager" row-count="4" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="6" left="6" bottom="6" right="6"/>
     <constraints>
-      <xy x="27" y="21" width="880" height="540"/>
+      <xy x="27" y="21" width="900" height="540"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -76,7 +76,7 @@
                         </constraints>
                         <properties>
                           <labelFor value="51126"/>
-                          <text value="&amp;Variable Prefix:"/>
+                          <text value="Context &amp;Variable:"/>
                         </properties>
                       </component>
                       <component id="6bd56" class="javax.swing.JLabel">
