--- a/modules/gateway/assertions/JsonTransformationAssertion/src/main/java/com/l7tech/external/assertions/jsontransformation/console/JsonTransformationPropertiesDialog.form
+++ b/modules/gateway/assertions/JsonTransformationAssertion/src/main/java/com/l7tech/external/assertions/jsontransformation/console/JsonTransformationPropertiesDialog.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="com.l7tech.external.assertions.jsontransformation.console.JsonTransformationPropertiesDialog">
-  <grid id="cbd77" binding="propertyPanel" layout-manager="GridLayoutManager" row-count="4" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="cbd77" binding="propertyPanel" layout-manager="GridLayoutManager" row-count="5" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="8" bottom="0" right="8"/>
     <constraints>
       <xy x="48" y="54" width="834" height="494"/>
@@ -40,7 +40,7 @@
       </component>
       <tabbedpane id="b84e2" binding="tabPane">
         <constraints>
-          <grid row="3" column="0" row-span="1" col-span="3" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
+          <grid row="4" column="0" row-span="1" col-span="3" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
             <preferred-size width="200" height="200"/>
           </grid>
         </constraints>
@@ -244,6 +244,22 @@
           <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties/>
+      </component>
+      <component id="39b38" class="javax.swing.JLabel">
+        <constraints>
+          <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text resource-bundle="com/l7tech/external/assertions/jsontransformation/console/JsonTransformationPropertiesDialog" key="prettyPrint"/>
+        </properties>
+      </component>
+      <component id="45ddd" class="javax.swing.JCheckBox" binding="prettyPrint">
+        <constraints>
+          <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value=""/>
+        </properties>
       </component>
     </children>
   </grid>
