--- a/modules/gateway/assertions/UUIDGeneratorAssertion/src/main/java/com/l7tech/external/assertions/uuidgenerator/console/UUIDGeneratorPropertiesDialog.form
+++ b/modules/gateway/assertions/UUIDGeneratorAssertion/src/main/java/com/l7tech/external/assertions/uuidgenerator/console/UUIDGeneratorPropertiesDialog.form
@@ -3,17 +3,17 @@
   <grid id="27dc6" binding="contentPane" layout-manager="GridLayoutManager" row-count="2" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="10" left="10" bottom="10" right="10"/>
     <constraints>
-      <xy x="20" y="20" width="264" height="75"/>
+      <xy x="20" y="40" width="272" height="75"/>
     </constraints>
     <properties/>
     <border type="none"/>
     <children>
       <component id="a8492" class="javax.swing.JLabel">
         <constraints>
-          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="9" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Variable Name:"/>
+          <text value="Store In Variable:"/>
         </properties>
       </component>
       <component id="60b58" class="javax.swing.JLabel">
@@ -21,13 +21,13 @@
           <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Amount:"/>
+          <text value="Quantity:"/>
         </properties>
       </component>
       <grid id="868f3" binding="variableNamePanel" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
-          <grid row="0" column="1" row-span="1" col-span="2" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+          <grid row="0" column="1" row-span="1" col-span="2" vsize-policy="3" hsize-policy="3" anchor="1" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties/>
         <border type="none"/>
