--- a/modules/gateway/console/src/main/java/com/l7tech/console/panels/resources/LogSinkManagerWindow.form
+++ b/modules/gateway/console/src/main/java/com/l7tech/console/panels/resources/LogSinkManagerWindow.form
@@ -8,7 +8,7 @@
     <properties/>
     <border type="none"/>
     <children>
-      <scrollpane id="d3c7f" binding="mainScrollPane">
+      <scrollpane id="d3c7f">
         <constraints>
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false">
             <minimum-size width="185" height="100"/>
@@ -17,7 +17,12 @@
         </constraints>
         <properties/>
         <border type="none"/>
-        <children/>
+        <children>
+          <component id="c32a7" class="javax.swing.JTable" binding="logSinkTable">
+            <constraints/>
+            <properties/>
+          </component>
+        </children>
       </scrollpane>
       <vspacer id="2abd1">
         <constraints>
