--- a/modules/gateway/assertions/SshAssertion/src/main/java/com/l7tech/external/assertions/ssh/console/SshTransportPropertiesPanel.form
+++ b/modules/gateway/assertions/SshAssertion/src/main/java/com/l7tech/external/assertions/ssh/console/SshTransportPropertiesPanel.form
@@ -106,7 +106,7 @@
           <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
         </constraints>
       </vspacer>
-      <grid id="ffa03" layout-manager="GridLayoutManager" row-count="1" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="f1095" layout-manager="GridLayoutManager" row-count="1" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
           <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -114,36 +114,30 @@
         <properties/>
         <border type="none"/>
         <children>
-          <component id="1e4d0" class="javax.swing.JLabel">
+          <component id="89711" class="javax.swing.JButton" binding="managePasswordsPrivateKeysButton">
+            <constraints>
+              <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text resource-bundle="com/l7tech/external/assertions/ssh/console/SshTransportAssertionPropertiesPanel" key="setHostPrivateKeyLabel"/>
+            </properties>
+          </component>
+          <component id="d2b07" class="com.l7tech.console.panels.SecurePasswordComboBox" binding="privateKeyField">
+            <constraints>
+              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+          </component>
+          <hspacer id="dd550">
+            <constraints>
+              <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+            </constraints>
+          </hspacer>
+          <component id="ac907" class="javax.swing.JLabel">
             <constraints>
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <text resource-bundle="com/l7tech/external/assertions/ssh/console/SshTransportAssertionPropertiesPanel" key="hostPrivateKeyLabel"/>
-            </properties>
-          </component>
-          <hspacer id="aab05">
-            <constraints>
-              <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-            </constraints>
-          </hspacer>
-          <component id="83b00" class="javax.swing.JTextField" binding="hostPrivateKeyTypeField">
-            <constraints>
-              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-                <preferred-size width="150" height="-1"/>
-              </grid>
-            </constraints>
-            <properties>
-              <editable value="false"/>
-              <enabled value="false"/>
-            </properties>
-          </component>
-          <component id="6de48" class="javax.swing.JButton" binding="setHostPrivateKeyButton">
-            <constraints>
-              <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties>
-              <text resource-bundle="com/l7tech/external/assertions/ssh/console/SshTransportAssertionPropertiesPanel" key="setHostPrivateKeyLabel"/>
             </properties>
           </component>
         </children>
